Add stylesheet loading to frontend

--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -1,1 +1,28 @@
-Hello Handlebars?!
+
+<h1 class="header">Team NDA - Anime Database</h1>
+
+<div id="main-content" class="container-fluid">
+    <div class="row">
+        <div class="col-first flex-box">
+            <input type="text" id="search" class="flex-content flex-fill"/>
+        </div>
+    </div>
+    <div class="row collapse" role="results">
+        <div class="card">
+            <div class="card-header">
+                Some Bootstrap Card Header
+            </div>
+            <div class="card-body row">
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+                <div class="col-md-4">Some content</div>
+            </div>
+        </div>
+    </div>
+</div>
+
