--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -3,11 +3,12 @@
 
 <div id="main-content" class="container-fluid">
     <div class="row">
-        <div class="col-first flex-box">
-            <input type="text" id="search" class="flex-content flex-fill"/>
+        <div class="col-first input-group input-group-lg input-group-text">
+            <input type="text" id="search" class="form-control"/>
+            <span class="input-group-text"><i class="bi-search"></i></span>
         </div>
     </div>
-    <div class="row collapse" role="results">
+    <div class="row collapse show" role="results">
         <div class="card">
             <div class="card-header">
                 Some Bootstrap Card Header
