Add collapsible visualization container

--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -8,22 +8,18 @@
             <span class="input-group-text"><i class="bi-search"></i></span>
         </div>
     </div>
-    <div class="row collapse show" role="results">
-        <div class="card">
-            <div class="card-header">
-                Some Bootstrap Card Header
-            </div>
-            <div class="card-body row">
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-                <div class="col-md-4">Some content</div>
-            </div>
+    <div class="row" role="visualization">
+        <div class="">
+            <a class="d-flex flex-row" data-bs-toggle="collapse" href="#vis-container">
+            <h3 class="flex-grow-1">Visualization</h3>
+                <i class="bi-arrows-collapse"></i>
+            </a>
         </div>
+        <div class="flex-content collapse show" id="vis-container">
+            Lorem Ipsum Dolor Sit Amet shenanigans
+        </div>
+    </div>
+    <div class="row" role="results" id="results">
     </div>
 </div>
 
