Add initial histogram visualization

--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -22,9 +22,8 @@
                         </button>
                     </h1>
                     <div id="vis-container" class="accordion-collapse collapse show" aria-labelledby="vis-header">
-                        <div class="accordion-body p-5" id="vis-canvas">
-                            Lorem Ipsum Dolor Sit Amet
-                        </div>
+                        <canvas class="accordion-body" id="vis-canvas">
+                        </canvas>
                     </div>
                 </div>
             </div>
