--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -1,11 +1,11 @@
 
-<header>
-    <h1 class="text-dark text-decoration-none">
-        Anime Database <span class="text-muted">- Team NDA</span>
-    </h1>
-</header>
 
-<div id="main-content" class="container container-xl d-grid gap-3 gap-xl-5">
+<div id="main-content" class="container container-xl gap-3 gap-xl-5">
+    <header class="row gap-0 p-3 mt-3 mb-5">
+        <h1 class="col text-dark text-decoration-none">
+            Anime Database <span class="text-muted">- Team NDA</span>
+        </h1>
+    </header>
     <div class="row">
         <div class="col input-group input-group-lg input-group-text">
             <input type="text" id="search" class="form-control"/>
