Add option to select visualization in the GUI

--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -22,6 +22,9 @@
                         </button>
                     </h1>
                     <div id="vis-container" class="accordion-collapse collapse show" aria-labelledby="vis-header">
+                        <div class="nav nav-pills" id="vis-nav">
+
+                        </div>
                         <canvas class="accordion-body" id="vis-canvas">
                         </canvas>
                     </div>
