--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -22,9 +22,9 @@
                         </button>
                     </h1>
                     <div id="vis-container" class="accordion-collapse collapse show" aria-labelledby="vis-header">
-                        <div class="nav nav-pills" id="vis-nav">
+                        <ul class="nav nav-pills" id="vis-nav">
 
-                        </div>
+                        </ul>
                         <canvas class="accordion-body" id="vis-canvas">
                         </canvas>
                     </div>
