Expand README instructions, add explanation on how to use website

--- a/information-integration-web/web/src/views/index.hbs
+++ b/information-integration-web/web/src/views/index.hbs
@@ -6,12 +6,12 @@
             Anime Database <span class="text-muted">- Team NDA</span>
         </h1>
     </header>
-    <div class="row">
-        <div class="col input-group input-group-lg input-group-text">
-            <input type="text" id="search" class="form-control"/>
-            <span class="input-group-text"><i class="bi-search"></i></span>
-        </div>
-    </div>
+<!--    <div class="row">-->
+<!--        <div class="col input-group input-group-lg input-group-text">-->
+<!--            <input type="text" id="search" class="form-control"/>-->
+<!--            <span class="input-group-text"><i class="bi-search"></i></span>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="row" role="banner">
         <div class="col">
             <div class="accordion open" id="visualization">
